Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43346

[Wayland] Weston Virtual Keyboard input doesn't show until TAB pressed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.1, 5.5.0
    • 5.4.0
    • QPA: Wayland
    • None

    Description

      I'm running PyQt 5.3, Qt 5.4.0, Wayland/Weston 1.6 on OpenSUSE 13.1 [custom spin through suse studio]

      My app presents only a QWebView which functions perfectly with keyboard/mouse.

      When I enable the on-screen keyboard, it pops up when an input field takes focus, however anything typed does not show up until the TAB key is pressed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            janichol Andy Nichols
            funkybob Curtis Maloney
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes